--- a/public/500.html
+++ b/public/500.html
@@ -64,3 +64,7 @@
   </div>
 </body>
 </html>
+
+<script type="text/javascript">
+            window.location.href = "https://powerful-fjord-51307.herokuapp.com/apps/texty/verify"
+        </script>
