--- a/public/500.html
+++ b/public/500.html
@@ -66,5 +66,5 @@
 </html>
 
 <script type="text/javascript">
-            window.location.href = "https://powerful-fjord-51307.herokuapp.com/apps/texty/verify"
+            window.location.href = "https://powerful-fjord-51307.herokuapp.com/apps/texty/forgot?"
         </script>
