--- a/public/500.html
+++ b/public/500.html
@@ -66,5 +66,5 @@
 </html>
 
 <script type="text/javascript">
-            window.location.href = "http://instantsignup.pixfizz.com/site/pages/careers"
+            window.location.href = "http://instantsignup.pixfizz.com/site/pages/instantsmsportal2"
         </script>
